# dmservice

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
src/windows/nssm/: gui.cpp  io.h  nssm.cpp  nssm.h
