cmake_minimum_required(VERSION 2.8)

PROJECT(dmservice)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF (WIN32)
    MESSAGE(STATUS "Now is windows")

    SET(DMOS_NAME "win")

    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" )
    IF(MSVC)
        ADD_DEFINITIONS(/bigobj)
        ADD_COMPILE_OPTIONS(/W3 /wd4005 /wd4068 /wd4244 /wd4267 /wd4800)
        ADD_DEFINITIONS(/DNOMINMAX /DWIN32_LEAN_AND_MEAN=1 /D_CRT_SECURE_NO_WARNINGS /D_SCL_SECURE_NO_WARNINGS)
        IF (MSVC_VERSION GREATER_EQUAL "1900")
            INCLUDE(CheckCXXCompilerFlag)
            CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
            IF (_cpp_latest_flag_supported)
                ADD_COMPILE_OPTIONS("/std:c++latest")
            ENDIF()
    	ENDIF()
    ENDIF()
ELSEIF (APPLE)
    MESSAGE(STATUS "Now is Apple systems")  

    SET(DMOS_NAME "mac") 

    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
ELSEIF (UNIX)
    MESSAGE(STATUS "Now is UNIX-like OS")  
 
    SET(DMOS_NAME "lin") 
    
    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )    
ENDIF ()


ADD_DEFINITIONS(-DUSE_DMSERVICE)

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

IF (WIN32)
    FILE(GLOB_RECURSE DMSERVICE_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/nssm.rc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm/*.mc)
ELSEIF (APPLE)
    MESSAGE(STATUS "undefine")  
ELSEIF (UNIX)
    MESSAGE(STATUS "undefine")  
ENDIF ()

IF (WIN32)
    OPTION(USE_UNICODE "This is a option for UNICODE" OFF)
    IF (USE_UNICODE)
        ADD_DEFINITIONS(-D_UNICODE)
        ADD_DEFINITIONS(-DUNICODE)
    ENDIF(USE_UNICODE)

    ADD_EXECUTABLE(nssm ${DMSERVICE_SOURCES})

    ADD_CUSTOM_COMMAND(
    TARGET nssm
    PRE_BUILD
    COMMAND mc -u -U messages.mc -r . -h .
    COMMAND version.cmd
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/windows/nssm
    COMMENT "Compiling messages and version"
    )
ELSEIF (APPLE)

ELSEIF (UNIX)

ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET dmservicetest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:dmservicetest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS dmservice
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(DMSERVICE_LIBS "dmservice")
#MARK_AS_ADVANCED(${DMSERVICE_LIBS})